--- a/netlify.toml
+++ b/netlify.toml
@@ -10,5 +10,5 @@ function = "hello"
   function = "proxy-requests"
 
 [[edge_functions]]
-  path = "/fetch-azure-badge"
+  path = "/fetch-azure-badge/*"
   function = "build-badge"
