--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,6 @@
-[context.production]
-  environment = { AZURE_PAT = "this is a very important secret" }
-
 [[edge_functions]]
-path = "/test"
+path = "/hello"
 function = "hello"
-
-[[edge_functions]]
-  path = "/fetch-joke"
-  function = "proxy-requests"
 
 [[edge_functions]]
   path = "/fetch-azure-badge/*"
